<resources>
    <string name="app_name">Daily News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily News</string>
    <string name="nav_header_subtitle">by troxumenko</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- menu items start -->
    <string name="menu_item_world_news">Новини світу</string>
    <string name="menu_item_all_news">Всі новини</string>
    <string name="menu_item_categories">Категорії</string>
    <string name="menu_item_technology">Технології</string>
    <string name="menu_item_sports">Спорт</string>
    <string name="menu_item_health">Здоров\'я</string>
    <string name="menu_item_entertainment">Розваги</string>
    <string name="menu_item_business">Бізнес</string>
    <string name="menu_item_other">Інше</string>
    <string name="menu_item_settings">Налаштування</string>

    <!-- detail activity -->
    <string name="source_name">Daily News by troxumenko</string>
    <string name="read_source_button">Читати повністю</string>

    <!-- settings activity -->
    <string name="settings_activity_notification_status">Вим./Увім. оповіщення</string>
    <string name="setting_activity_notification_title">Оповіщення</string>
    <string name="search">Поиск</string>
    <string name="edit_text_search">Поиск</string>

</resources>
